@@ -120,6 +120,8 @@ define("_CO_PROFILE_AUDIO_DATA_CREATION", "");
 define("_CO_PROFILE_AUDIO_DATA_CREATION_DSC", " ");
 define("_CO_PROFILE_AUDIO_DATA_UPDATE", "");
 define("_CO_PROFILE_AUDIO_DATA_UPDATE_DSC", " ");
+define("_CO_PROFILE_AUDIO_CREATION_TIME", "Creation time");
+define("_CO_PROFILE_AUDIO_CREATION_TIME_DSC", " ");
 // tribes
 define("_CO_PROFILE_TRIBES_TRIBES_ID", "Tribe's ID");
 define("_CO_PROFILE_TRIBES_TRIBES_ID_DSC", " ");
@@ -173,16 +175,18 @@ define("_CO_PROFILE_PICTURES_URL_DSC", " ");
 define("_CO_PROFILE_PICTURES_PRIVATE", "Make this a private picture");
 define("_CO_PROFILE_PICTURES_PRIVATE_DSC", " ");
 // videos
-define("_CO_PROFILE_VIDEOS_VIDEO_ID", "Video ID");
-define("_CO_PROFILE_VIDEOS_VIDEO_ID_DSC", " ");
-define("_CO_PROFILE_VIDEOS_UID_OWNER", "");
+define("_CO_PROFILE_VIDEOS_VIDEOS_ID", "Video ID");
+define("_CO_PROFILE_VIDEOS_VIDEOS_ID_DSC", " ");
+define("_CO_PROFILE_VIDEOS_UID_OWNER", "Submitter");
 define("_CO_PROFILE_VIDEOS_UID_OWNER_DSC", " ");
 define("_CO_PROFILE_VIDEOS_VIDEO_DESC", "Video description");
 define("_CO_PROFILE_VIDEOS_VIDEO_DESC_DSC", " ");
 define("_CO_PROFILE_VIDEOS_YOUTUBE_CODE", "Youtube's code");
-define("_CO_PROFILE_VIDEOS_YOUTUBE_CODE_DSC", " Please enter the code of your clip in you tube.");
-define("_CO_PROFILE_VIDEOS_MAIN_VIDEO", "Is this a main video");
+define("_CO_PROFILE_VIDEOS_YOUTUBE_CODE_DSC", " Please enter the code of your clip in you tube.<br /><b>Example:</b> 3UkPhvse8JA");
+define("_CO_PROFILE_VIDEOS_MAIN_VIDEO", "Make this the main video");
 define("_CO_PROFILE_VIDEOS_MAIN_VIDEO_DSC", " ");
+define("_CO_PROFILE_VIDEOS_CREATION_TIME", "Creation time");
+define("_CO_PROFILE_VIDEOS_CREATION_TIME_DSC", " ");
 // visitors
 define("_CO_PROFILE_VISITORS_VISIT_ID", "Id");
 define("_CO_PROFILE_VISITORS_VISIT_ID_DSC", " ");
